// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat answer bot on empty message 1`] = `
<DocumentFragment>
  <div
    class="chat"
  >
    <div
      class="user"
    >
      <div
        class="user__icon"
      />
      <input
        class="user__input"
        data-testid="user"
        placeholder="Enter your name"
        type="text"
        value=""
      />
    </div>
    <div
      class="messagelist"
      data-testid="messageList"
    />
    <form
      class="form"
      data-testid="form"
    >
      <textarea
        class="message"
        data-testid="message"
        placeholder="Your message"
      />
      <button
        class="btn btn-top"
        data-testid="button"
        disabled=""
        type="submit"
      >
         Send message
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Chat render with snapshot 1`] = `
<DocumentFragment>
  <div
    class="chat"
  >
    <div
      class="user"
    >
      <div
        class="user__icon"
      />
      <input
        class="user__input"
        data-testid="user"
        placeholder="Enter your name"
        type="text"
        value=""
      />
    </div>
    <div
      class="messagelist"
      data-testid="messageList"
    />
    <form
      class="form"
      data-testid="form"
    >
      <button
        class="del-button"
      >
        <svg
          viewBox="0 0 96 96"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="m24,78c0,4.968 4.029,9 9,9h30c4.968,0 9-4.032 9-9l6-48h-60l6,48zm33-39h6v39h-6v-39zm-12,0h6v39h-6v-39zm-12,0h6v39h-6v-39zm43.5-21h-19.5c0,0-1.344-6-3-6h-12c-1.659,0-3,6-3,6h-19.5c-2.487,0-4.5,2.013-4.5,4.5s0,4.5 0,4.5h66c0,0 0-2.013 0-4.5s-2.016-4.5-4.5-4.5z"
          />
        </svg>
      </button>
      <textarea
        class="message"
        data-testid="message"
        placeholder="Your message"
      />
      <button
        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButtonBase-root Mui-disabled btn btn-top css-11qr2p8-MuiButtonBase-root-MuiButton-root"
        data-testid="button"
        disabled=""
        tabindex="-1"
        type="submit"
      >
        Send message
        <span
          class="MuiButton-endIcon MuiButton-iconSizeSmall css-155nyw6-MuiButton-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="SendIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2.01 21 23 12 2.01 3 2 10l15 2-15 2z"
            />
          </svg>
        </span>
      </button>
    </form>
  </div>
</DocumentFragment>
`;
